# DofusBotFM

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
script/EnumGenerator/: EnumGenerator.py  EnumPattern.cpp.in  EnumPattern.h.in
src/: FM.cpp  FM.h  Item.cpp  Item.h  ItemJsonFormatExemple.h  Rune.json  RuneApplicationInterface.h  RuneProperties.cpp  RuneProperties.h  RunesList.h  Stat.json  StatsDensity.cpp  StatsDensity.h  StatsList.h  StatsRunes.cpp  StatsRunes.h  main.cpp
test/: CMakeLists.txt  FMTest.cpp  ItemTest.cpp  RunePropertiesTest.cpp  StatsDensityTest.cpp  StatsRunesTest.cpp
test/mock/: MockRuneApplication.h
